--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/node": "18.13.0",
     "@types/react": "18.0.27",
     "@types/react-dom": "18.0.10",
+    "animejs": "^3.2.1",
     "eslint": "8.33.0",
     "eslint-config-next": "13.1.6",
     "next": "13.1.6",
@@ -21,7 +22,10 @@
     "typescript": "4.9.5"
   },
   "devDependencies": {
+    "@tailwindcss/typography": "^0.5.9",
+    "@types/animejs": "^3.1.7",
     "@types/react-scroll": "^1.8.6",
+    "anime": "^0.1.2",
     "autoprefixer": "^10.4.13",
     "next-themes": "^0.2.1",
     "postcss": "^8.4.21",
