--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "animejs": "^3.2.1",
     "eslint": "8.33.0",
     "eslint-config-next": "13.1.6",
+    "flowbite": "^1.6.3",
     "next": "13.1.6",
     "react": "18.2.0",
     "react-dom": "18.2.0",
