--- a/package.json
+++ b/package.json
@@ -20,7 +20,10 @@
     "next": "13.1.6",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "typescript": "4.9.5"
+    "rimsportfolio": "file:",
+    "sharp": "^0.33.4",
+    "typescript": "4.9.5",
+    "yarn": "^1.22.22"
   },
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.9",
